# zenscraper

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  scorecard.yml
src/zenscraper/: cli.py  helpers.py
src/zenscraper/sources/: abstract_git_source.py  abstract_source.py  linux_firmware.py  linux_firmware_source.py  platomav_cpumicrocodes.py  platomav_cpumicrocodes_source.py
src/zenscraper/utils/: patch.py  sha256.py
