[build-system]
requires = ["hatchling==1.31.0", "hatch-vcs==0.5.0"]
build-backend = "hatchling.build"

[project]
name = "zenscraper"
dynamic = ["version"]
authors = [
  { name="Antonio Vázquez Blanco", email="antoniovazquezblanco@gmail.com" },
  { name="Kaya Erchiran" },
]
description = "A command line tool to collect AMD uCode!"
readme = "README.md"
license = "GPL-2.0-or-later"
license-files = ["LICENSE.md"]
requires-python = ">=3.10"
keywords = ["amd", "ucode", "microcode", "scraper", "firmware"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware",
]
dependencies = [
  "rich==15.0.0",
  "amd-ucode-container==1.0.2",
  "amd-ucode-patch==1.0.0",
  "GitPython==3.1.50",
]

[project.urls]
Homepage = "https://github.com/amd-zenith/zenscraper"
Repository = "https://github.com/amd-zenith/zenscraper"
Issues = "https://github.com/amd-zenith/zenscraper/issues"

[project.scripts]
zenscraper = "zenscraper.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/zenscraper"]
